# repositorg

./: .travis.yml  README.md  organamer.py  pyproject.toml  repositorg_uuid  requirements.txt  setup.cfg  setup.py
.gentoo/: install.sh
.gentoo/app-misc/repositorg/: Manifest  repositorg-99999.ebuild
.gentoo/app-misc/repositorg/files/: repositorg_uuid.initd
.gentoo/app-text/repositorg/: repositorg-9999.ebuild
.gentoo/profiles/: repo_name
.repositorg/: UUID_trigger.sh  repositorg_push.sh  uuid_trigger.sh
.repositorg/sources/: example-device_post-hook.sh  example_samba.sh
.repositorg/sources/UUIDs/: EXAMPLE-UUID.sh
example_data/destination/: bar002.NEF
repositorg/: base.py  cli.py  extractor.py  processing.py  utils.py  votes.py
repositorg/tests/: test_base.py
src/: organamer.py  organamer_cli.py  organamer_reposit.py
src/organamer/: base.py  cli.py  extractor.py
src/orgaprocesser/: base.py  video_processing.py
test_scripts/: reposit.sh  reposit_legacy.sh
tests/: test_base.py
