[metadata]
name = repositorg
url = https://github.com/TheChymera/repositorg
author = Horea Christian
version = 0.1.1-dev
maintainer = Horea Christian
classifiers =
	Development Status :: 1 - Planning
	Environment :: Console
	Programming Language :: Python
license = GPL-3
description = Automatically reposit, organize, rename, and process large collections of files.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
	Source Code = https://github.com/TheChymera/repositorg

[options]
python_requires = >=3.7
install_requires =
    argh
    mutagen
    regex
zip_safe = False
packages = find_namespace:

[options.packages.find]
include = repositorg*

[options.entry_points]
console_scripts =
	repositorg=repositorg.cli:main
